Bug 461877 - Subscriptions not visible
Summary: Subscriptions not visible
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-15 16:36 UTC by Radostin Ivanov
Modified: 2022-11-15 18:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
opml export with my subs (3.92 KB, text/x-opml+xml)
2022-11-15 16:36 UTC, Radostin Ivanov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Radostin Ivanov 2022-11-15 16:36:53 UTC
Created attachment 153768 [details]
opml export with my subs

STEPS TO REPRODUCE
1. Import .opml file or subscribe to the podcast from RSS link
2. Podcasts not visible in the subscriptions section

I have several podcast streams from one publisher.
This one is working:
https://www.capital.bg/podcast/rss/?rubr=4906
These two are not:
https://www.capital.bg/podcast/rss/?rubr=4998
https://www.capital.bg/podcast/rss/?rubr=4999

Podcasts are not visible in Subscriptions but appear in Discover as subscribed.

SOFTWARE/OS VERSIONS
Manjaro Linux: Sway Window Manager
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.7
Wayland: wlroots 0.15.1

ADDITIONAL INFORMATION
I can subscribe properly from other programs such as Gpodder and AntenaPod.
Comment 1 bart 2022-11-15 18:07:57 UTC
I confirm the issue.

Kasts has an internal function to do a fuzzy check to see whether a podcast has already been added or not.  This is to ensure that adding the same podcast with e.g. http and https scheme doesn't add duplicates of the same podcast.  That function was also discarding query parameters since that's another common source of duplicate entries.  However, I see that these podcasts identify by using a different query parameter.
I'll remove that bit of the fuzzy check algorithm.  The fix should be in the next release (22.11).
Comment 2 bart 2022-11-15 18:20:03 UTC
Git commit d192784e1216149761348d5f13a80103a8949b88 by Bart De Vries.
Committed on 15/11/2022 at 18:13.
Pushed by bdevries into branch 'master'.

Improve check for existing podcasts

The feedExists method will now also take query parameters into account.

M  +14   -6    src/datamanager.cpp
M  +2    -0    src/datamanager.h

https://invent.kde.org/plasma-mobile/kasts/commit/d192784e1216149761348d5f13a80103a8949b88