Improve check for existing podcasts

The feedExists method will now also take query parameters into account.

BUG: 461877